--- a/BotTest2/BotTest2.csproj
+++ b/BotTest2/BotTest2.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
 
