--- a/BotTest2/BotTest2.csproj
+++ b/BotTest2/BotTest2.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
